# key-egg

./: .gitignore  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  getinfo.c  key_egg.c  key_egg.h  key_egg_conf.h  krecv.c  mail.c  main.c  pager.c
